# graphbook-huggingface

./: README.md  hf.config.yaml  pyproject.toml
.github/workflows/: pypi.yaml  test-pypi.yaml
graphbook_huggingface/: __init__.py  hf_audio_transformers.py  hf_datasets.py  hf_multimodal_transformers.py  hf_nlp_transformers.py  hf_pipeline.py  hf_postprocessing.py  hf_vision_transformers.py  nodes.py
web/: package-lock.json  package.json  webpack.config.js
web/src/: Pipeline.tsx  main.tsx
